--- a/src/br/taskfacil/views/AnchorPaneCadastroUsuarioDialog.fxml
+++ b/src/br/taskfacil/views/AnchorPaneCadastroUsuarioDialog.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -34,11 +35,11 @@
                </font>
             </Label>
             <TextField fx:id="textFieldEmail" prefHeight="25.0" prefWidth="219.0" promptText="           " GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="textFieldSenha" prefHeight="22.0" prefWidth="293.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <PasswordField fx:id="passwordFieldSenha" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Group layoutX="114.0" layoutY="124.0" />
       <Button fx:id="buttonCancelar" layoutX="205.0" layoutY="99.0" mnemonicParsing="false" onAction="#handleButtonCancelar" text="Cancelar" />
-      <Button fx:id="buttonConfirmar" layoutX="108.0" layoutY="102.0" mnemonicParsing="false" text="Confirmar" />
+      <Button fx:id="buttonConfirmar" layoutX="108.0" layoutY="102.0" mnemonicParsing="false" onAction="#handleButtonConfirmar" text="Confirmar" />
    </children>
 </AnchorPane>
