--- a/src/br/taskfacil/views/AnchorPaneCadastroTarefa.fxml
+++ b/src/br/taskfacil/views/AnchorPaneCadastroTarefa.fxml
@@ -1,8 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.taskfacil.controllers.AnchorPaneCadastroTarefaController">
+	<children>
+		<SplitPane dividerPositions="0.6515679442508711" layoutX="292.0" layoutY="176.0" orientation="VERTICAL" prefHeight="576.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+			<items>
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="326.0" prefWidth="798.0">
+					<children>
+						<TableView fx:id="tableViewTarefas" layoutX="151.0" layoutY="42.0" prefHeight="283.0" prefWidth="798.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+							<columns>
+								<TableColumn fx:id="tableColumnId" prefWidth="50.0" text="ID" />
+								<TableColumn fx:id="tableColumnTitulo" prefWidth="746.0" text="Titulo" />
+							</columns>
+							<columnResizePolicy>
+								<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+							</columnResizePolicy>
+						</TableView>
+					</children>
+				</AnchorPane>
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="232.0" prefWidth="798.0" SplitPane.resizableWithParent="false">
+					<children>
+						<Label layoutX="307.0" layoutY="14.0" text="Detalhes da Tarefa">
+							<font>
+								<Font size="20.0" />
+							</font>
+						</Label>
+						<GridPane layoutX="176.0" layoutY="49.0" prefHeight="90.0" prefWidth="447.0">
+							<columnConstraints>
+								<ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="79.0" />
+								<ColumnConstraints hgrow="SOMETIMES" maxWidth="387.0" minWidth="10.0" prefWidth="368.0" />
+							</columnConstraints>
+							<rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+							</rowConstraints>
+							<children>
+								<Label text="Titulo:" GridPane.rowIndex="1">
+									<font>
+										<Font name="System Bold" size="14.0" />
+									</font>
+								</Label>
+      								<Label text="Descrição:" GridPane.rowIndex="2">
+      									<font>
+      										<Font name="System Bold" size="14.0" />
+      									</font>
+      								</Label>
+								<Label text="Local:" GridPane.rowIndex="3">
+									<font>
+										<Font name="System Bold" size="14.0" />
+									</font>
+								</Label>
+								<Label fx:id="labelTitulo" GridPane.columnIndex="1" GridPane.rowIndex="1">
+									<font>
+										<Font size="14.0" />
+									</font>
+								</Label>
+								<Label fx:id="labelDescricao" GridPane.columnIndex="1" GridPane.rowIndex="2">
+									<font>
+										<Font size="14.0" />
+									</font>
+								</Label>
+								<Label fx:id="labelLocal" GridPane.columnIndex="1" GridPane.rowIndex="3">
+									<font>
+										<Font size="14.0" />
+									</font>
+								</Label>
+                        <Label text="Data:" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelId1" prefWidth="62.0" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelData" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="labelId" prefHeight="20.0" prefWidth="350.0" GridPane.columnIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label text="Id:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+							</children>
+						</GridPane>
+						<Group layoutX="293.0" layoutY="155.0">
+							<children>
+								<Button fx:id="buttonInserir" mnemonicParsing="false" onAction="#handleButtonInserir" text="Inserir" />
+								<Button fx:id="buttonEditar" layoutX="77.0" mnemonicParsing="false" onAction="#handleButtonEditar" text="Editar" />
+								<Button fx:id="buttonApagar" layoutX="148.0" mnemonicParsing="false" onAction="#handleButtonApagar" text="Apagar" />
+							</children>
+						</Group>
+					</children>
+				</AnchorPane>
+			</items>
+		</SplitPane>
+	</children>
 </AnchorPane>
-
