--- a/src/br/taskfacil/views/VBoxPrincipal.fxml
+++ b/src/br/taskfacil/views/VBoxPrincipal.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="454.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.taskfacil.controllers.VBoxPrincipalController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.taskfacil.controllers.VBoxPrincipalController">
    <children>
       <MenuBar>
         <menus>
@@ -18,13 +21,32 @@
                </items></Menu>
         </menus>
       </MenuBar>
-      <AnchorPane fx:id="anchorPane" prefHeight="430.0" prefWidth="611.0">
+      <AnchorPane fx:id="anchorPane" prefHeight="507.0" prefWidth="627.0">
          <children>
-            <Label layoutX="47.0" layoutY="125.0" text="Bem-Vindo ao Task Fácil!">
+            <Label layoutX="122.0" text="Bem-Vindo ao Task Fácil!">
                <font>
-                  <Font size="48.0" />
+                  <Font size="36.0" />
                </font>
             </Label>
+            <Label layoutX="68.0" layoutY="53.0" text="Suas tarefas planejadas,">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelNome" layoutX="361.0" layoutY="53.0" text="LabelNome">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <TableView fx:id="tableViewTarefas" layoutX="15.0" layoutY="102.0" prefHeight="349.0" prefWidth="610.0">
+              <columns>
+                <TableColumn fx:id="tableColumnTitulo" prefWidth="112.0" text="Titulo" />
+                <TableColumn fx:id="tableColumnDescricao" prefWidth="206.0" text="Descrição" />
+                  <TableColumn fx:id="tableColumnLocal" minWidth="0.0" prefWidth="189.0" text="Local" />
+                  <TableColumn fx:id="tableColumnData" minWidth="0.0" prefWidth="102.0" text="Data" />
+              </columns>
+            </TableView>
+            <Button fx:id="buttonLogout" layoutX="295.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleButtonLogout" text="Logout" />
          </children>
       </AnchorPane>
    </children>
