--- a/bin/br/taskfacil/views/VBoxPrincipal.fxml
+++ b/bin/br/taskfacil/views/VBoxPrincipal.fxml
@@ -11,13 +11,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.taskfacil.controllers.VBoxPrincipalController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.taskfacil.controllers.VBoxPrincipalController">
    <children>
       <MenuBar>
         <menus>
-          <Menu fx:id="menuLista" mnemonicParsing="false" text="Tarefas">
+          <Menu fx:id="menuLista" mnemonicParsing="false" text="Ações">
                <items>
-                  <MenuItem fx:id="menuItemEditar" mnemonicParsing="false" onAction="#handleMenuItemEditar" text="Editar" />
+                  <MenuItem fx:id="menuItemAdicionar"  onAction="#handleMenuItemAdicionar" mnemonicParsing="false" text="Adicionar" />
+                  <MenuItem mnemonicParsing="false" text="Editar" />
+                  <MenuItem fx:id="menuItemExcluir" mnemonicParsing="false" text="Excluir" />
+                  <MenuItem fx:id="menuItemLogout" mnemonicParsing="false" onAction="#handleMenuItemLogout" text="Logout" />
                </items></Menu>
         </menus>
       </MenuBar>
@@ -46,8 +49,7 @@
                   <TableColumn fx:id="tableColumnData" minWidth="0.0" prefWidth="102.0" text="Data" />
               </columns>
             </TableView>
-            <Button fx:id="buttonLogout" layoutX="295.0" layoutY="494.0" mnemonicParsing="false" onAction="#handleButtonLogout" text="Logout" />
-            <Button fx:id="buttonCarregar" layoutX="270.0" layoutY="93.0" mnemonicParsing="false" onAction="#handleButtonCarregar" text="Carregar agenda" />
+            <Button fx:id="buttonCarregar" layoutX="289.0" layoutY="93.0" mnemonicParsing="false" onAction="#handleButtonCarregar" text="Atualizar" />
          </children>
       </AnchorPane>
    </children>
