--- a/src/br/taskfacil/views/AnchorPaneCadastroTarefaDialog.fxml
+++ b/src/br/taskfacil/views/AnchorPaneCadastroTarefaDialog.fxml
@@ -1,8 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="322.0" prefWidth="463.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.taskfacil.controllers.AnchorPaneCadastroTarefaDialogController">
+   <children>
+      <GridPane layoutX="58.0" layoutY="14.0" prefHeight="237.0" prefWidth="348.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="10.0" prefWidth="101.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="10.0" prefWidth="240.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Título" />
+            <Label text="Descrição" GridPane.rowIndex="1" />
+            <Label text="Data de Realização" GridPane.rowIndex="2" />
+            <Label text="Local" GridPane.rowIndex="3" />
+            <TextField fx:id="textFieldTitulo" prefWidth="166.0" GridPane.columnIndex="1" />
+            <TextField fx:id="textFieldData" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="textFieldLocal" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextArea fx:id="textAreaDescricao" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+      <Group layoutX="80.0" layoutY="263.0">
+         <children>
+            <Button fx:id="buttonConfirmar2" layoutX="-18.0" layoutY="2.0" mnemonicParsing="false" onAction="#handleButtonConfirmar" text="Confirmar" />
+            <Button fx:id="buttonLimpar" layoutX="125.0" layoutY="1.0" mnemonicParsing="false" onAction="#handleButtonLimpar" text="Limpar" />
+            <Button fx:id="buttonVoltar" layoutX="269.0" layoutY="1.0" mnemonicParsing="false" onAction="#handleButtonVoltar" text="Voltar" />
+         </children>
+      </Group>
+   </children>
 </AnchorPane>
-
